--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ email: wesley.kent98@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A site dedicated to cybersecurity, pen testing, and personal projects.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "wesleykent-website/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  fe-moldark
 
 # Build settings
