--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ url: "wesleykent-website/" # the base hostname & protocol for your site, e.g. ht
 github_username:  fe-moldark
 
 # Build settings
-theme: bulma-clean-theme
-#remote_theme: chrisrhymes/bulma-clean-theme
+#theme: bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme
 
 plugins:
   - jekyll-feed
