--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@
       link: /tipsandtricks/usingnmap/
     - name: Steganography
       link: /tipsandtricks/steganography/
-    - name: Default payloads and msfconsole
+    - name: Default payloads and Metasploit
       link: /tipsandtricks/defaultpayloads/
     - name: Resources
       link: /tipsandtricks/resources/
