--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,6 +34,9 @@
   
 - name: FE Moldark
   link: /femoldark/
+  dropdown: 
+    - name: Game Console
+    - link: /femoldark/gameconsole/
   
 - name: Contact
   link: /contact/
