test navigation tab

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,6 +35,8 @@
 - name: FE Moldark
   link: /femoldark/
   dropdown: 
+    - name: FE Moldark
+    - link: /femoldark/
     - name: Game Console
     - link: /femoldark/gameconsole/
   
