fixed? I hope so

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,13 +32,12 @@
 - name: Raspberry Pi Projects
   link: /raspberrypi/
   
+    
 - name: FE Moldark
   link: /femoldark/
-  dropdown: 
-    - name: FE Moldark
-    - link: /femoldark/
+  dropdown:
     - name: Game Console
-    - link: /femoldark/gameconsole/
+      link: /femoldark/gameconsole/
   
 - name: Contact
   link: /contact/
