--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@
       link: /tipsandtricks/usingnmap/
     - name: Steganography
       link: /tipsandtricks/steganography/
-    - name: Default Payloads and Metasploit
-      link: /tipsandtricks/defaultpayloads/
+    - name: Metasploit
+      link: /tipsandtricks/metasploit/
     - name: Resources
       link: /tipsandtricks/resources/
     - name: The Basics
