--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@
       link: /scripts/websitehashing/
     - name: RPi and Dilbert
       link: /scripts/rpi_and_dilbert/
-    - name: Custom Cipher
+    - name: Cipher
       link: /creating_my_own_cipher/
   
 - name: Raspberry Pi Projects
@@ -37,7 +37,7 @@
 - name: USB Injectors
   link: /usb_injectors/
   
-- name: Custom Cipher
+- name: Cipher
   link: /creating_my_own_cipher/
     
 - name: FE Moldark
