--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -47,6 +47,8 @@
       link: /femoldark/gameconsole/
     - name: Circuit Diagram & Wiring
       link: /femoldark/circuit_diagram/
+    -name: STL Files for Download
+      link: /femoldark/stls_for_download/
   
 - name: Contact
   link: /contact/
