--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -57,7 +57,7 @@
     - name: STL Files for Download
       link: /femoldark/stls_for_download/
       
-- name: Kismet and the Aircrack-ng suite
+- name: Attacking Wireless Networks
   link: /attacking_wireless_networks/
   
 - name: USB Injectors
