--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@
 #for changin site's color - /home/wesleyvm1/WesleyKentBlog/assets/css/
 #for default.html - /var/lib/gems/2.7.0/gems/bulma-clean-theme-0.13.1/_layouts/
 
-title: Wesley Kent
+title: WK
 email: wesley.kent98@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A site dedicated to cybersecurity, CTF exploits, and personal projects
