--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -78,6 +78,8 @@
       link: /scripts/rpi_and_dilbert/
     - name: Automating Work Stuff
       link: /scripts/automated_clicker_program/
+    - name: Automating Work Stuff (Part 2)
+      link: /scripts/scanner_audit/
     - name: Cipher
       link: /scripts/creating_my_own_cipher/
     - name: Google Admin Console
