--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,6 +36,8 @@
 - name: RPi Projects
   link: /raspberrypi/
   dropdown:
+  - name: Web kiosk
+    link: /raspberrypi/web_kiosk/
   - name: Dashcam
     link: /raspberrypi/dashcam/
   - name: RetroPie
